--- a/instagram/accounts/templates/account/register.html
+++ b/instagram/accounts/templates/account/register.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %} {% block content %}
 <h2>Register</h2>
 <form method="POST" action="">
-    {% csrf_token %} {% for field in registrationform %} {{field.label_tag}} {{field}} {% for error in field.errors %}
-    <small style="color: red;">{{error}}</small> {% endfor %} {% endfor %}
-    <button type="submit">Register</button>
+  {% csrf_token %} {% for field in registrationform %}
+  <p>
+    {{field.label_tag}} {{field}} {% for error in field.errors %}
+    <small style="color: red">{{error}}</small>
+    {% endfor %}
+  </p>
+  {% endfor %}
+  <button type="submit">Register</button>
 </form>
 {% endblock content %}
