--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -9,7 +9,7 @@
       <a href="{% url 'home'%}">home</a> |
       <a href="{% url 'logout'%}">logout</a>
     </p>
-    <p>Hello, {{ request.user.username }}|</p>
+    <p>Hello, {{ request.user.username }}</p>
     {% else %}
     <p>
       <a href="{% url 'register'%}">register</a> |
