--- a/instagram/accounts/templates/account/account.html
+++ b/instagram/accounts/templates/account/account.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <h2>Account</h2>
 <form method="POST">
-    {% csrf_token %} {% for field in login_form %} 
+    {% csrf_token %} {% for field in account_form %} 
     <p>
     {{field.label_tag}} {{field}}
     </p>
