--- a/instagram/posts/templates/post/home.html
+++ b/instagram/posts/templates/post/home.html
@@ -1,3 +1,10 @@
-{% extends 'base.html' %} {% block content %} 
+{% extends 'base.html' %} {% block content %}
 <h1>Logged in</h1>
+
+<div class="container">
+  <div class="d-flex flex-column">
+   <!--load all posts-->
+  </div>
+</div>
+
 {% endblock content %}
