--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" /> {% include 'snippets/header.html' %}
     <title>instagram</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-    {% if request.user.is_authenticated %}
-    <p>
-      <a href="{% url 'home'%}">home</a> |
-      <a href="{% url 'account'%}">account</a>|
-      <a href="{% url 'logout'%}">logout</a>
-    </p>
-    <p>Hello, {{ request.user.username }}</p>
-    {% else %}
-    <p>
-      <a href="{% url 'register'%}">register</a> |
-      <a href="{% url 'login'%}">login</a>
-    </p>
-    {% endif %}
-  </head>
 
-  <body>
-    {% block content %} {% endblock content %}
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+</head>
+
+<body>
+    <!--body-->
+    <style type="style.css">
+        .main{ min-height: 100vh; height: 100%;}
+    </style>
+    <div class="main">
+      {% block content %}
+      {% endblock content %}
+    </div>
+    <!--end body-->
+    {% include 'snippets/footer.html' %}
+</body>
+
 </html>
