bootstrap login & registration

--- a/instagram/templates/snippets/header.html
+++ b/instagram/templates/snippets/header.html
@@ -44,9 +44,9 @@
   <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
 </svg></a>
   </nav>
-  {% else %}
+  {% comment %} {% else %}
   <a class="p-2 text-dark" href="{% url 'register'%}">register</a> 
-  <a class="p-2 text-dark" href="{% url 'login'%}">login</a>
+  <a class="p-2 text-dark" href="{% url 'login'%}">login</a> {% endcomment %}
   {% endif %}
   
 </div>
