--- a/instagram/accounts/templates/account/login.html
+++ b/instagram/accounts/templates/account/login.html
@@ -1,15 +1,54 @@
-{% extends 'base.html' %} {% block content %}
-<h2>Login</h2>
-<form method="POST">
-    {% csrf_token %} {% for field in login_form %} 
-    <p>
-    {{field.label_tag}} {{field}}
-    </p>
-    {% endfor %}
+{% extends 'base.html' %}
+ {% block content %}
 
+ <style type="text/css">
+ .form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.h3{
+    text-align:center;
+}
+ </style>
+
+ <form class="form-signin" method="POST">
+ {% csrf_token %}
+ 
+  <h1 class="h3 mb-3 font-weight-normal">Instagram</h1>
+  
+  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+ 
+  <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
     {% for field in login_form %}
         {% for error in login_form.field.errors %}
+        <p>
             <small style="color: red;">{{error}}</small> 
+        </p>
         {% endfor %} 
     
     {% endfor %}
@@ -19,6 +58,10 @@
         <p>{{login_form.non_field_errors}}</p>
     </div>
     {% endif %}
-    <button type="submit">Login</button>
+
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+  <a class="p-2 text-dark" href="{% url 'register'%}">register</a>
+
+  
 </form>
 {% endblock content %}
