--- a/instagram/accounts/templates/account/register.html
+++ b/instagram/accounts/templates/account/register.html
@@ -1,13 +1,77 @@
-{% extends 'base.html' %} {% block content %}
-<h2>Register</h2>
-<form method="POST" action="">
-  {% csrf_token %} {% for field in registrationform %}
-  <p>
-    {{field.label_tag}} {{field}} {% for error in field.errors %}
-    <small style="color: red">{{error}}</small>
+{% extends 'base.html' %} 
+{% block content %}
+ <style type="text/css">
+ .form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="text"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.h3{
+    text-align:center;
+    
+}
+ 
+
+ </style>
+
+ <form class="form-signin" method="POST">
+ {% csrf_token %}
+ 
+  <h1 class="h3 mb-3 font-weight-bold">Instagram</h1>
+  <h1 class="h3 mb-3 font-weight-light">Sign up to see photos and videos from your friends</h1>
+  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  <input type="text" name="fullname" id="inputFullname" class="form-control" placeholder="full name" required autofocus>
+  <input type="text" name="username" id="inputUsername" class="form-control" placeholder="username" required autofocus>
+  <input type="text" name="phone_number" id="inputPhonenumber" class="form-control" placeholder="phone number" required autofocus>
+  <input type="password" name="password1" id="inputpassword" class="form-control" placeholder="password" required autofocus>
+ 
+  <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="confirm Password" required>
+    {% for field in registrationform %}
+        {% for error in registrationform.field.errors %}
+        <p>
+            <small style="color: red;">{{error}}</small> 
+        </p>
+        {% endfor %} 
+    
     {% endfor %}
-  </p>
-  {% endfor %}
-  <button type="submit">Register</button>
+     
+    {% if registrationform.non_field_errors %}
+        <div style="color:red;">
+        <p>{{registrationform.non_field_errors}}</p>
+    </div>
+    {% endif %}
+
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+  
 </form>
+
 {% endblock content %}
